--- a/HTML/table.html
+++ b/HTML/table.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Simple -->
-    <table border="1" cellspacing="5">
+    <table border="1" cellspacing="10">
         <tr> <!-- Table Row -->
             <td>Baris 1, Kolom 1</td> <!-- Table Data (Column) -->
             <td>Baris 1, Kolom 2</td>
@@ -20,7 +20,7 @@
     </table>
     <hr>
     <!-- Complex -->
-    <table border="1" cellspacing="0">
+    <table border="1" cellspacing="0" cellpading="100"> <!-- Cell Padding di HTML5 tdk ada (searching) -->
         <thead> <!-- Table Header -->
             <th></th> <!-- Header -->
             <th>Kolom 1</th>
